refactor: Updated Sitemap and Robots.txt

--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -115,7 +115,7 @@
 		<nav>www.y-g.tech HTML Site Map</nav>
 		<h3>
 <span>Last updated: 2024, May 24<br />
-Total pages: 11</span>
+Total pages: 12</span>
 <a href="https://www.y-g.tech">www.y-g.tech Homepage</a>
 </h3></div>
 	<div id="cont">
@@ -139,8 +139,9 @@ Total pages: 11</span>
 </ul></li>
 </ul><ul class="level-1">
 
-            <li class="lhead">projects/  <span class="lcount">4 pages</span></li>
+            <li class="lhead">projects/  <span class="lcount">5 pages</span></li>
             
+<li class="lpage"><a href="https://www.y-g.tech/projects/capture-a-trip" title="Capture a Trip | Projects | Yash Godara">Capture a Trip | Projects | Yash Godara</a></li>
 <li class="lpage"><a href="https://www.y-g.tech/projects/dramatic-scripts" title="Dramatic Scripts | Projects | Yash Godara">Dramatic Scripts | Projects | Yash Godara</a></li>
 <li class="lpage"><a href="https://www.y-g.tech/projects/portfolio-nextjs" title="Next.js + Contentlayer Portfolio Website | Projects | Yash Godara">Next.js + Contentlayer Portfolio Website | Projects | Yash Godara</a></li>
 <li class="lpage"><a href="https://www.y-g.tech/projects/blueeverest" title="Blue Everest - Digial Solutions for your Business | Projects | Yash Godara">Blue Everest - Digial Solutions for your Business | Projects | Yash Godara</a></li>
